force-app/main/default/objects/AprovacaoDespesaReembolso__c/AprovacaoDespesaReembolso__c.object-meta.xml
<CustomObject>
    <label>Aprovação Despesa e Reembolso</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aprovações Despesas e Reembolsos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>