force-app/main/default/objects/AprovacaoDespesaReembolso__c/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AprovacoesDespesasReembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>