force-app/main/default/objects/AprovacaoDespesaReembolso__c/fields/CodigoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoAprovacao__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Código da Aprovação</label>
    <type>AutoNumber</type>
</CustomField>