force-app/main/default/objects/AprovacaoDespesaReembolso__c/fields/ComentarioAprovador__c.field-meta.xml
<CustomField>
    <fullName>ComentarioAprovador__c</fullName>
    <label>Comentário do Aprovador</label>
    <type>TextArea</type>
</CustomField>