force-app/main/default/objects/AprovacaoDespesaReembolso__c/fields/DespesaRejeitada__c.field-meta.xml
<CustomField>
    <fullName>DespesaRejeitada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Despesa Rejeitada</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Despesa/Reembolso não pertence a essa aprovação</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Despesa_e_Reembolso__c.Aprovacao__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Despesa_e_Reembolso__c</referenceTo>
    <relationshipLabel>Aprovações Despesas e Reembolsos</relationshipLabel>
    <relationshipName>AprovacoesDespesasReembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>