force-app/main/default/objects/AprovacaoDespesaReembolso__c/listViews/AprovacoesPendentes.listView-meta.xml
<ListView>
    <fullName>AprovacoesPendentes</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pendente</value>
    </filters>
    <label>Aprovações Pendentes</label>
</ListView>